package org.game.protobuf.c2s;

option java_outer_classname = "C2SMailMsg";

// 邮件操作类型
enum MailOperationType {
	// 读取
	READ = 1;
	// 收取
	RECEIVE = 2;
	// 删除
	DELETE = 3;
}


// 邮件操作
// code = 769
message MailHandleMsg {
	repeated string ids = 1; 			// 邮件ID
	required MailOperationType type = 2;	// 邮件操作类型
	enum MsgID{eMsgID = 769;}; //注意：消息id放最后,以免客户端解析异常
}

// 取得全部邮件
// code = 772
message GetMails{
	enum MsgID{eMsgID = 772;}; //注意：消息id放最后,以免客户端解析异常
}

